2007-03-26  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistUtil.tcl: Fixed a bug reported by Kai Morich,
	  related to the -snipside option.

2007-03-23  Csaba Nemethi <csaba.nemethi@t-online.de>

	* *.tcl:         Bumped the version number to 4.6.1.
	* COPYRIGHT.txt:

	* scripts/tablelistBind.tcl: Improved the focus handling when resizing
	  a column interactively (bug reported by Jorge Enderr).

	* scripts/tablelistUtil.tcl: Fixed a bug reported by Harold Campbell,
	  related to hidden rows when having -selecttype cell; fixed a bug in
	  the cellconfigure subcommand, reported by Roy Terry.

	* scripts/tablelistWidget.tcl: Corrected a typo in the adaptation of
	  vertical scrolling to the text widget changes made in Tk 8.5 (bug
	  reported by Julian M Noble).

2007-02-01  Csaba Nemethi <csaba.nemethi@t-online.de>

	* doc/tablelistTile.html: Minor improvement.

2007-01-31  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistWidget.tcl: Minor improvements.

2007-01-29  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistBind.tcl:   Minor improvements.
	* scripts/tablelistConfig.tcl:
	* scripts/tablelistUtil.tcl:

2007-01-21  Csaba Nemethi <csaba.nemethi@t-online.de>

	* tablelist.tcl:      Minor improvements.
	* tablelist_tile.tcl:

2007-01-20  Csaba Nemethi <csaba.nemethi@t-online.de>

	* CHANGES.txt: Minor improvements.

	* tablelist_tile.tcl:          Moved some further alias definitions to
	* scripts/tablelistConfig.tcl: tablelist_tile.tcl.

2007-01-12  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistUtil.tcl: New procedure tablelist::getSepX.

	* scripts/tclIndex: Newly generated.

2007-01-07  Csaba Nemethi <csaba.nemethi@t-online.de>

	* CHANGES.txt:                 Implemented the -changesnipside column
	* scripts/tablelistConfig.tcl: configuration option.
	* scripts/tablelistSort.tcl:
	* scripts/tablelistUtil.tcl:
	* scripts/tablelistWidget.tcl:
	* doc/tablelistWidget.html:
